# pymovements-videoreplay

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pylintrc  pymovements-videoreplay-testing.ipynb  pyproject.toml  requirements.txt
data/SB-SAT/model/: model_training.ipynb
data/UTF-8S1T4/S1T4 videos/: c2r2.mov  c3r3.mov
src/antiocr/: __init__.py  anti_ocr.py  antiocr_example_usage.ipynb  column_mapping_dialog.py
src/fixationcorrection/: __init__.py  column_mapping_dialogue.py  fixation_correction.py  fixation_correction_example_usage.ipynb  ocr_reader.py
src/videoreplay/: __init__.py  column_mapping_dialog.py  session_select_dialog.py  video_player.py  videoreplay_example_usage_image_stimuli.ipynb  videoreplay_example_usage_video_stimuli.ipynb  videreplay_example_usage.ipynb  videreplay_example_usage_image_stimuli.ipynb  videreplay_example_usage_video_stimuli.ipynb
